--- a/public/upbeat-news.html
+++ b/public/upbeat-news.html
@@ -17,13 +17,13 @@
     <h2>The Websites</h2>
     <ol>
         <li>CBS News Uplift</li>
-        <a href="https://www.cbsnews.com/uplift/">https://www.cbsnews.com/uplift/</a>
+        <a target="_blank" href="https://www.cbsnews.com/uplift/">https://www.cbsnews.com/uplift/</a>
         <li>Good News Network</li>
-        <a href="https://www.goodnewsnetwork.org/">https://www.goodnewsnetwork.org/</a>
+        <a target="_blank" href="https://www.goodnewsnetwork.org/">https://www.goodnewsnetwork.org/</a>
         <li>Today Good News</li>
-        <a href="https://www.today.com/news/good-news">https://www.today.com/news/good-news</a>
+        <a target="_blank" href="https://www.today.com/news/good-news">https://www.today.com/news/good-news</a>
         <li>BBC Uplifting News</li>
-        <a href="https://www.bbc.com/news/topics/cx2pk70323et">https://www.bbc.com/news/topics/cx2pk70323et</a>
+        <a target="_blank" href="https://www.bbc.com/news/topics/cx2pk70323et">https://www.bbc.com/news/topics/cx2pk70323et</a>
 
         
     </ol>
