--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <h3>
         <a href="public/upbeat-news.html">Upbeat News Websites</a>
     </h3>
+     <h3>
+        <a href="public/cute-animals.html">Cute Animals to Screenshot</a>
+    </h3>
 
 </body>
 </html>
