--- a/public/cute-animals.html
+++ b/public/cute-animals.html
@@ -11,3 +11,5 @@
     </head>
 <h1>Cute Animals to Screenshot</h1>
 <a href="../index.html">Home</a>
+<img src="https://pbs.twimg.com/media/CobDNkkW8AIGHaB?format=jpg&name=900x900">
+<p>This baby boston is sure to warm your heart!</p>
