--- a/public/cute-animals.html
+++ b/public/cute-animals.html
@@ -13,3 +13,4 @@
 <a href="../index.html">Home</a>
 <img src="https://pbs.twimg.com/media/CobDNkkW8AIGHaB?format=jpg&name=900x900">
 <p>This baby boston is sure to warm your heart!</p>
+<img src="https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fboston-retriever-v0-72ha1rzy1t2b1.jpg%3Fwidth%3D640%26crop%3Dsmart%26auto%3Dwebp%26s%3D0a4865b4c2f47bef3f3bbf40c74fdaae8dadbb29">
