--- a/public/cute-animals.html
+++ b/public/cute-animals.html
@@ -9,6 +9,7 @@
             href="./style.css"
         />
     </head>
+<body>
 <h1>Cute Animals to Screenshot</h1>
 <a href="../index.html">Home</a>
     <hr />
@@ -25,4 +26,5 @@
 <p>Like I said....</p>
 <img src="https://upload.wikimedia.org/wikipedia/en/7/71/Laika_%28Soviet_dog%29.jpg">
 <p>Probably the most famous mutt. If you can guess. It's Laika!!!</p>
+</body>
 </html>
