--- a/public/smart-human.html
+++ b/public/smart-human.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Isador's Guide to Stuff<3</title>
+        <link
+            rel="stylesheet"
+            href="./style.css"
+        />
+    </head>
+<body>
+<h1>If you figure out what the following says, you are smart and I got puzzles for you!</h1>
+<a href="../index.html">Home</a>
+    <hr />
+  
+</body>
+</html>
