--- a/public/smart-human.html
+++ b/public/smart-human.html
@@ -12,6 +12,8 @@
 <body>
 <h1>If you figure out what the following says, you are smart and I got puzzles for you!</h1>
 <a href="../index.html">Home</a>
+    <p>Yay! You can read this! You are so cool. But, I got other puzzles whomp, whomp, whomp :(. </p>
+    
     <hr />
   
 </body>
