--- a/public/smart-human.html
+++ b/public/smart-human.html
@@ -12,8 +12,14 @@
 <body>
 <h1>If you figure out what the following says, you are smart and I got puzzles for you!</h1>
 <a href="../index.html">Home</a>
-    <p>Yay! You can read this! You are so cool. But, I got other puzzles whomp, whomp, whomp :(. </p>
-    
+    <p>Yay! You can read this! You are so cool. But, I got other puzzles whomp, whomp, whomp :(. Oh, btw answers are at the bottom!((d[-_-]b))</p>
+    <ul>
+        <li>
+            Who are these people? ~(_8^(I)          *<|:‑)
+            Do it! NYT Games!!!   
+            Puzzle Prime
+        </li>
+    </ul>   
     <hr />
   
 </body>
