--- a/public/smart-human.html
+++ b/public/smart-human.html
@@ -12,12 +12,14 @@
 <body>
 <h1>If you figure out what the following says, you are smart and I got puzzles for you!</h1>
 <a href="../index.html">Home</a>
-    <p>Yay! You can read this! You are so cool. But, I got other puzzles whomp, whomp, whomp :(. Oh, btw answers are at the bottom!((d[-_-]b))</p>
+    <p>Yay! You can read this! You are so cool. But, I got other puzzles whomp, whomp, whomp :(. ((d[-_-]b)) ¯\_(ツ)_/¯</p>
     <ul>
         <li>
-            Who are these people? ~(_8^(I)          *<|:‑)
-            Do it! NYT Games!!!   
-            Puzzle Prime
+            Who are these people? ~(_8^(I)          *<|:‑)        (Look it up)
+            https://www.nytimes.com/crosswords  
+            https://www.puzzleprime.com/puzzles/
+            The classic Rebus! https://tinyurl.com/isadorp1, https://tinyurl.com/isadorp2, https://tinyurl.com/isadorp3, https://tinyurl.com/isadorp4, https://tinyurl.com/isadorp5, https://tinyurl.com/isadorp6,https://tinyurl.com/isadorp7
+            
         </li>
     </ul>   
     <hr />
