--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
      <h3>
         <a href="public/cute-animals.html">Cute Animals to Screenshot</a>
     </h3>
+     <h3>
+        <a href="public/smart-human.html">Puzzles for Smarty Pants!</a>
+    </h3>
 
 </body>
 </html>
