--- a/public/smart-human.html
+++ b/public/smart-human.html
@@ -6,7 +6,7 @@
         <title>Isador's Guide to Stuff<3</title>
         <link
             rel="stylesheet"
-            href="./style.css"
+            href="./style2.css"
         />
     </head>
 <body>
